syntax = "proto3";

message JustMessage {
  string field_a = 1;
  string field_b = 2;
}
