syntax = "proto3";

message TypeA {
  int32 field = 1;
}

message TypeB {
  TypeA field = 1;
}